--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=yt-tools
 server.port=8080
-youtube.api.key= AIzaSyA4abKvL1FA2Ln0FgzA9vLlYQZD517OgpI
+youtube.api.key= your api key
 youtube.api.base.url=https://www.googleapis.com/youtube/v3
 youtube.api.search.url=${youtube.api.base.url}/search
 youtube.api.videos.url=${youtube.api.base.url}/videos
